<resources>
    <!--  app meta  -->
    <string name="app_name">NaiveCalc</string>
    <!--  operation strings  -->
    <string name="opMultiply">×</string>
    <string name="opDivide">/</string>
    <string name="opSubtract">-</string>
    <string name="opAdd">+</string>
    <string name="opEquate">=</string>
    <string name="opPoint">.</string>
    <string name="opClear">C</string>
    <string name="opLeftBracket">(</string>
    <string name="opRightBracket">)</string>
    <!--  num strings  -->
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
</resources>
