<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text=""
        android:textColor="#333333"
        android:textSize="40sp"
        android:textStyle="bold"
        android:scrollbars = "vertical"
        android:onClick="copyResToClipboard"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        />
    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/opClear"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="1dp"
            android:layout_marginTop="0dp"
            android:layout_marginStart="0dp"
            android:layout_weight="0.5"
            android:background="#CC2E71F8"
            android:text="@string/opClear"
            android:textAlignment="center"
            android:textColor="#ececec"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="clearResField"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/opLeftBracket"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="0.25"
            android:layout_margin="1dp"
            android:layout_marginTop="0dp"
            android:background="#CC2E71F8"
            android:text="@string/opLeftBracket"
            android:textAlignment="center"
            android:textColor="#ececec"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="addOpToResField"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/opRightBracket"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="0.25"
            android:layout_margin="1dp"
            android:layout_marginTop="0dp"
            android:background="#CC2E71F8"
            android:text="@string/opRightBracket"
            android:textAlignment="center"
            android:textColor="#ececec"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="addOpToResField"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/opAdd"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="1dp"
            android:layout_marginTop="0dp"
            android:layout_marginStart="0dp"
            android:layout_weight="0.25"
            android:background="#CC2E71F8"
            android:text="@string/opAdd"
            android:textAlignment="center"
            android:textColor="#ececec"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="addOpToResField"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/opSubtract"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="0.25"
            android:layout_margin="1dp"
            android:layout_marginTop="0dp"
            android:background="#CC2E71F8"
            android:text="@string/opSubtract"
            android:textAlignment="center"
            android:textColor="#ececec"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="addOpToResField"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/opMultiply"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="0.25"
            android:layout_margin="1dp"
            android:layout_marginTop="0dp"
            android:background="#CC2E71F8"
            android:text="@string/opMultiply"
            android:textAlignment="center"
            android:textColor="#ececec"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="addOpToResField"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/opDivide"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="0.25"
            android:layout_margin="1dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:background="#CC2E71F8"
            android:text="@string/opDivide"
            android:textAlignment="center"
            android:textColor="#ececec"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="addOpToResField"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/num7"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_margin="1dp"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="0dp"
            android:layout_height="100dp"
            android:background="#FFFFFF"
            android:text="@string/num7"
            android:textAlignment="center"
            android:textColor="#333333"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="addOpToResField"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/num8"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_margin="1dp"
            android:layout_height="100dp"
            android:background="#FFFFFF"
            android:text="@string/num8"
            android:textAlignment="center"
            android:textColor="#333333"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="addOpToResField"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/num9"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_margin="1dp"
            android:layout_height="100dp"
            android:background="#FFFFFF"
            android:text="@string/num9"
            android:textAlignment="center"
            android:textColor="#333333"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="addOpToResField"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/num0"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_margin="1dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:layout_height="100dp"
            android:background="#FFFFFF"
            android:text="@string/num0"
            android:textAlignment="center"
            android:textColor="#333333"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="addOpToResField"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp">

        <Button
            android:id="@+id/num4"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_margin="1dp"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="0dp"
            android:layout_height="100dp"
            android:background="#FFFFFF"
            android:text="@string/num4"
            android:textAlignment="center"
            android:textColor="#333333"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="addOpToResField"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/num5"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_margin="1dp"
            android:layout_height="100dp"
            android:background="#FFFFFF"
            android:text="@string/num5"
            android:textAlignment="center"
            android:textColor="#333333"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="addOpToResField"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/num6"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_margin="1dp"
            android:layout_height="100dp"
            android:background="#FFFFFF"
            android:text="@string/num6"
            android:textAlignment="center"
            android:textColor="#333333"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="addOpToResField"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/opPoint"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_margin="1dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:layout_height="100dp"
            android:background="#FFFFFF"
            android:text="@string/opPoint"
            android:textAlignment="center"
            android:textColor="#333333"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="addOpToResField"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="28dp">

        <Button
            android:id="@+id/num1"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_margin="1dp"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="0dp"
            android:layout_height="100dp"
            android:background="#FFFFFF"
            android:text="@string/num1"
            android:textAlignment="center"
            android:textColor="#333333"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="addOpToResField"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/num2"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_margin="1dp"
            android:layout_marginBottom="0dp"
            android:layout_height="100dp"
            android:background="#FFFFFF"
            android:text="@string/num2"
            android:textAlignment="center"
            android:textColor="#333333"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="addOpToResField"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/num3"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_margin="1dp"
            android:layout_marginBottom="0dp"
            android:layout_height="100dp"
            android:background="#FFFFFF"
            android:text="@string/num3"
            android:textAlignment="center"
            android:textColor="#333333"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="addOpToResField"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/opEqual"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_margin="1dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:layout_height="100dp"
            android:background="#FFFFFF"
            android:text="@string/opEquate"
            android:textAlignment="center"
            android:textColor="#333333"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="showRes"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
